--- a/CSS/page.css
+++ b/CSS/page.css
@@ -3,17 +3,18 @@
 		padding: 4px;
 		text-align:center; 
 		color:white;
+		width:100%;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 	ul {
 	    list-style-type: none;
-	    margin: 5px 0px 5px;
-	    overflow: hidden;
+	    margin:0;
+	    padding:0;
+	    width:17%;
 	    background-color: rgba(0,0,0,0.70);
-	}
-
-	li {
-	    float: left;
+	    position:fixed;
+	    height:572px;
+	    overflow: auto;
 	}
 
 	li a, .dropbtn {
@@ -32,7 +33,12 @@
 	li.dropdown {
 	    display: inline-block;
 	}
-
+	.if {
+		height:570px;
+		width:83%;
+		margin-left:17%;
+		position:relative;
+	}
 	.dropdown-content {
 	    display: none;
 	    position: absolute;
@@ -57,7 +63,7 @@
 	    display: block;
 	}
 	.footer {
-	padding: 4px;
+	padding: 15px;
     background-color: rgba(0,0,0,0.25);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
