--- a/CSS/page.css
+++ b/CSS/page.css
@@ -1,12 +1,4 @@
-.header{
-		background-color:black;
-		padding: 4px;
-		text-align:center; 
-		color:white;
-		width:100%;
-		font-family: Arial, Helvetica, sans-serif;
-	}
-	ul {
+ul {
 	    list-style-type: none;
 	    margin:0;
 	    padding:0;
@@ -68,3 +60,21 @@
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 	}
+
+	* {
+  box-sizing: border-box;
+}
+.header{
+    background-color:black;
+    padding: 15px;
+    text-align:center; 
+    color:white;
+    width:100%;
+    font-family: Verdana;
+}
+
+@media only screen and (max-width:620px) {
+  .footer, .main, .right {
+    width:100%;
+  }
+}
