--- a/CSS/pagina.css
+++ b/CSS/pagina.css
@@ -1,13 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-.principal{
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
 .h{
 text-align:center;
 background-color:black;
@@ -17,113 +7,102 @@ color:white;
 padding: 5px;
 }
 
-.topnav{
-  overflow: hidden;
-  background-color: #333;
+.topnav {
+    background-color: #333;
+    overflow: hidden;
 }
 
-.topnav a{
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 10px;
-  font-family: Verdana;
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
-.topnav a:hover{
-  background-color: rgba(255,255,255,0.15);
-  color: rgba(0,0,0,0.80);
-}
-
-.active{
-  background-color: #4CAF50;
-  color:white;
+.active {
+    background-color: #4CAF50;
+    color: white;
 }
 
 .topnav .icon {
-  display:none;
+    display: none;
 }
 
-.dropdown{
-  float: left;
-  overflow: hidden;
+.dropdown {
+    float: left;
+    overflow: hidden;
 }
 
-.dropdown .dropbtn{
-  font-size: 15px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+.dropdown .dropbtn {
+    font-size: 17px; 
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
-.dropdown-content a{
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
+    background-color: #555;
+    color: white;
 }
 
-.dropdown-content a:hover{
-  background-color: #ddd;
-  color: black;
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
-.dropdown:hover .dropdown-content{
-  display:block;
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon{
+  .topnav a.icon {
     float: right;
     display: block;
   }
 }
 
-@media screen and (max-width: 600px){
   .topnav.responsive {position: relative;}
-  .topnav.responsive.icon{
+  .topnav.responsive a.icon {
     position: absolute;
     right: 0;
-    top: 0; 
+    top: 0;
   }
-}
-
-.topnav.responsive a{
-  float: none;
-  display:block;
-  text-align: left;
-}
-
-.topnav.responsive .dropdown {float: none;}
-.topnav.responsive .dropdown-content {position: relative;}
-.topnav.responsive .dropdown .dropbtn{
-  display: block;
-  width: 100%;
-  text-align: left;
-}
-
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
