--- a/CSS/firsthtml.css
+++ b/CSS/firsthtml.css
@@ -13,7 +13,7 @@ header{
 		font-family: Arial, Helvetica, sans-serif;
 		letter-spacing: 3px;
 		line-height: 1.8;
-		font-size:20px;
+		font-size:2vw;
 		}
 
 	img{
