--- a/CSS/firsthtml.css
+++ b/CSS/firsthtml.css
@@ -4,13 +4,13 @@ header{
 		color:white;
 		border-bottom:10px solid black;
 		background-color:grey;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: Verdana;
 	}
 	p{
 		padding-top: 100px;
 		text-align: justify;
 		text-decoration: none;	
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: Verdana;
 		letter-spacing: 3px;
 		line-height: 1.8;
 		font-size:2vw;
