--- a/CSS/pagina.css
+++ b/CSS/pagina.css
@@ -8,26 +8,27 @@ padding: 5px;
 }
 
 .encabezados{
-    text-align: justify;
+    background-color: black;
+    color:white;
+    border-bottom:10px solid black;
+    background-color:grey;
     font-family: Verdana;
-    border-bottom: solid black 5px;
-    background-color: gray;
-    padding: 10px 20px;
-    color: white;
 }
 .cuerpo{
     text-align: justify;
     font-family: Verdana;
-    font-size: 27.5px;
+    font-size: 15px;
     letter-spacing: 3px;
     line-height: 2;
     word-spacing: 4px;
     }
 
 .logo{
-    float:left;
-    max-width: 240px;
-    max-height: 240px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 .navbar {
